--- a/_posts/2023-08-30-snake.md
+++ b/_posts/2023-08-30-snake.md
@@ -1,4 +1,11 @@
-
+---
+toc: true
+comments: false
+layout: post
+title: Snake
+type: hacks
+courses: { compsci: {week: 2} }
+---
 <html lang="en">
 <head>
     <meta charset="UTF-8">
